...
                // AGE
                FutureBuilder<ProfileConstants>(
                    future: profileConstants,
                    builder: ((context, snapshot) {
                      if (snapshot.hasData) {
                        return CustomCard(
                          key: Key("custom_card_age"),
                          padding: EdgeInsets.zero,
                          margin: EdgeInsets.zero,
                          child: CustomFieldMat(
                            prefixIcon: CupertinoIcons.profile_circled,
                            labelText: globals.LabelAge,
                            textEditingController: globals.ageContoller,
...
                // GENDER
                FutureBuilder<ProfileConstants>(
                    future: profileConstants,
                    builder: ((context, snapshot) {
                      if (snapshot.hasData) {
                        return CustomCard(
                          key: Key("custom_card_gender"),
                          padding: EdgeInsets.zero,
                          margin: EdgeInsets.zero,
                          child: CustomFieldMat(
                            prefixIcon: CupertinoIcons.profile_circled,
                            labelText: globals.LabelGender,
                            textEditingController: globals.genderContoller,
...
                // CITY (RESIDENCE)
                FutureBuilder<ProfileConstants>(
                    future: profileConstants,
                    builder: ((context, snapshot) {
                      if (snapshot.hasData) {
                        return CustomCard(
                          key: Key("custom_card_city"),
                          padding: EdgeInsets.zero,
                          margin: EdgeInsets.zero,
                          child: CustomFieldMat(
                            prefixIcon: CupertinoIcons.profile_circled,
                            labelText: globals.LabelResidence,
                            textEditingController: globals.residenceContoller,
...
                // JOB
                FutureBuilder<ProfileConstants>(
                    future: profileConstants,
                    builder: ((context, snapshot) {
                      if (snapshot.hasData) {
                        return CustomCard(
                          key: Key("custom_card_job"),
                          padding: EdgeInsets.zero,
                          margin: EdgeInsets.zero,
                          child: CustomFieldMat(
                            prefixIcon: CupertinoIcons.profile_circled,
                            labelText: globals.LabelJob,
                            textEditingController: globals.jobContoller,
...
                    })),
                SizedBox(
                  height: 10,
                ),
                // BIO
                CustomCard(
                  key: Key("custom_card_bio"),
                  padding: EdgeInsets.zero,
                  margin: EdgeInsets.zero,
                  child: CustomFieldMat(
                    prefixIcon: CupertinoIcons.profile_circled,
                    labelText: globals.LabelBio,
                    textEditingController: globals.bioContoller,
...
    );
  }
}

/// BUTTON register.
class RegisterButton_SignUp2 extends StatelessWidget {
  const RegisterButton_SignUp2({super.key});

  @override
  Widget build(BuildContext context) {
    return Container(
      margin: EdgeInsets.only(top: 9, right: 9, left: 9, bottom: 9),
      decoration: BoxDecoration(
...
