...
    return Container(
      child: Column(
        children: [
          // ACTUAL PAGE
          Expanded(
              child: GestureDetector(
            key: Key("gesture_detector_intro1"),
            onTap: () {
              Navigator.pushReplacement(
                context,
                CupertinoPageRoute(
                    builder: (context) => const Introduction2Screen()),
              );
...
